Fix UX bug (breaking line on invisible toolMenu)
ToolMenu was just invisible so lines where breaking when going through
where it expands. Change css properties so menu actually exists or not
(instead of visible or hidden) so figures do not break when going
through it.

--- a/WebClient/app/scene/Board/components/SideBarOverlay/components/Tools/styles.scss
+++ b/WebClient/app/scene/Board/components/SideBarOverlay/components/Tools/styles.scss
@@ -29,6 +29,8 @@
 .plusMenuGrid {
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  background-color: white;
 }
 
 .toolRow:hover {
